--- a/erich/index.html
+++ b/erich/index.html
@@ -19,7 +19,7 @@
 Enth&uuml;llt: 5/56, Stand: 17.05.2021<br>
 <br>
 
-1. Steve Rö..... (verstorben)<br>
+1. Steve Röhrich (verstorben)<br>
 2. Chaomeng Zhang<br>
 3. Hans Peter<br>
 4. Marcel Hawks (verstorben)<br>
