--- a/erich/index.html
+++ b/erich/index.html
@@ -24,7 +24,7 @@ Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymaini
 2. Chaomeng Zhang<br>
 3. Hans Peter<br>
 4. Marcel Hawks (verstorben)<br>
-5. Jane Glitter-Hoffman, geb. Glitter<br>
+5. Jane Glitter<br>
 6. <br>
 7. <br>
 8. <br>
