--- a/flag/index.html
+++ b/flag/index.html
@@ -7,6 +7,7 @@
 			function doThis()
 			{
 				var scene = document.getElementById("textInput").value; //gets what's in the box
+				console.log(scene);
 				var specColor = ""; //this is the buffer for each color
 				var i; //this is for the for-loop taking care of each letter in the input
 				var j = 1; //this is used to test when to save a color
@@ -47,6 +48,7 @@
       function doThisWith(flag)
 			{
 				var scene = flag; //gets what's in the box
+				console.log(scene);
 				var specColor = ""; //this is the buffer for each color
 				var i; //this is for the for-loop taking care of each letter in the input
 				var j = 1; //this is used to test when to save a color
@@ -87,6 +89,7 @@
 			function doThisTest()
 			{
 				var scene = document.getElementById("textInput"); //gets what's in the box
+				console.log(scene);
 				var specColor = ""; //this is the buffer for each color
 				var i; //this is for the for-loop taking care of each letter in the input
 				var j = 1; //this is used to test when to save a color
