--- a/erich/index.html
+++ b/erich/index.html
@@ -16,12 +16,12 @@
 
 <body>
 <h1>Erichs Kinder</h1>
-Enth&uuml;llt: 5/56, Stand: 25.06.2021<br>
+Enth&uuml;llt: 5/56, Stand: 02.08.2021<br>
 Rick Erich ist eine Figur von Rickymainia. <a href="https://twitch.tv/Rickymainia">Twitch</a> / <a href="https://discord.gg/WPf2GGe">Discord</a> / <a href="https://www.youtube.com/user/Rickymainia">YouTube</a> / <a href="https://www.youtube.com/channel/UCAly4ieviprBJLhjHgOxGAg">VOD-Kanal auf YT</a><br>
 <br>
 
 1. Steve Röhrich (verstorben)<br>
-2. Chaomeng Zhang<br>
+2. Xiaomeng Zhang<br>
 3. Hans Peter<br>
 4. Marcel Hawks (verstorben)<br>
 5. Jane Glitter<br>
