--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -52,9 +52,9 @@ console.log("cover, toc, br news");
 		{text: "fnReport", fontSize: 75}
 		];
 		if(fnuser.result=true) {
-		inhalt.push({text: datum+" - "+timeConverter(datum)+" - "+pvar+" - "+fnuser.account_id+" - de", alignment: 'center'});
+		inhalt.push({text: datum+" - "+timeConverter(datum)+" - "+pvar1+" - "+fnuser.account_id+" - de", alignment: 'center'});
 		} else {
-		inhalt.push({text: datum+" - "+timeConverter(datum)+" - "+pvar+" - "+fnuser.error+" - de", alignment: 'center'});
+		inhalt.push({text: datum+" - "+timeConverter(datum)+" - "+pvar1+" - "+fnuser.error+" - de", alignment: 'center'});
 		}
 		
 		
@@ -428,7 +428,7 @@ console.log("cover, toc, br news");
 
 		
 		console.log("Creating PDF...");
-		pdfMake.createPdf(docDefinition).download("fnReport-"+datum+"-"+pvar+"-de.pdf");
+		pdfMake.createPdf(docDefinition).download("fnReport-"+datum+"-"+pvar1+"-de.pdf");
 		console.log("Done.");
 	</script>
 	
