--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -77,7 +77,7 @@ console.log("cover, toc, br news");
 		var bild3=httpGet("https://helloacm.com/api/image-to-base64/?url="+bildurl3); 
 		console.log(bildurl3);
 		console.log(bild3);
-		var bildurl4=fnstw.news[1].image;
+		var bildurl4=fncreative.news[0].image;
 		var bild4=httpGet("https://helloacm.com/api/image-to-base64/?url="+bildurl4);
 		console.log(bildurl4);
 		console.log(bild4);
