--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -428,7 +428,7 @@ console.log("cover, toc, br news");
 
 		
 		console.log("Creating PDF...");
-		pdfMake.createPdf(docDefinition).download("fnReport-"+datum+"-"+pvar1+"-de.pdf");
+		pdfMake.createPdf(docDefinition).download("fnReport-"+datum+"-"+pvar1+"-"+pvar2+".pdf");
 		console.log("Done.");
 	</script>
 	
