--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -429,7 +429,7 @@ console.log("cover, toc, br news");
 		
 		console.log("Creating PDF...");
 		pdfMake.createPdf(docDefinition).download("fnReport-"+datum+"-"+pvar1+"-"+pvar2+".pdf");
-		console.log("Done.");
+		console.log("Done. Please wait for the PDF to download.");
 	</script>
 	
 	</body>
