--- a/fnReport/index.html
+++ b/fnReport/index.html
@@ -18,7 +18,7 @@
   
   <body bgcolor="#007f00">
     <font color="white">
-      You need an API key from <a href="https://fortniteapi.io">fortniteapi.io</a>. See the source code of this generator <a href="https://github.com/stl1988/stl1988.github.io/tree/main/fnReport">here</a>.<br><br>
+      You need an API key from <a href="https://fortniteapi.io">fortniteapi.io</a>. See the source code of this generator <a href="https://github.com/stl1988/stl1988.github.io/tree/main/fnReport">here</a> In order to watch progress, please open the dev console. On Chromium-based browsers, this can normally be done with F12.<br><br>
     <form action="generate.html">
       Username (from the Fortnite game, not the API): <input type="text" name="user"><br>
       Language (2-letter-code, like en or de): <input type="text" name="lang"><br>
