--- a/fnReport/index.html
+++ b/fnReport/index.html
@@ -20,11 +20,17 @@
     <font color="white">
       You need an API key from <a href="https://fortniteapi.io">fortniteapi.io</a>. See the source code of this generator <a href="https://github.com/stl1988/stl1988.github.io/tree/main/fnReport">here</a> In order to watch progress, please open the dev console. On Chromium-based browsers, this can normally be done with F12.<br><br>
     <form action="generate.html">
+      Generate fnReport<br>
       Username (from the Fortnite game, not the API): <input type="text" name="user"><br>
       Language (2-letter-code, like en or de): <input type="text" name="lang"><br>
       fortniteapi.io API key: <input type="text" name="key"><br>
       <input type="submit">
-    </form>
+    </form><br><br>
+      <form action="poi.html">
+        Generate POI image book<br>
+        fortniteapi.io API key: <input type="text" name="key"><br>
+        <input type="submit">
+      </form>
     </font>
   </body>
 </html>
