--- a/fnReport/poi.html
+++ b/fnReport/poi.html
@@ -89,9 +89,9 @@ console.log("cover");
 		};
 
 		
-		console.log("PDF wird erstellt...");
+		console.log("Generating PDF...");
 		pdfMake.createPdf(docDefinition).download("fnAtlas-"+fnpoi.gameVersion+".pdf");
-		console.log("Fertig.");
+		console.log("Done. Please wait for the PDF to download.");
 	</script>
 	
 	</body>
