--- a/fnReport/index.html
+++ b/fnReport/index.html
@@ -33,6 +33,12 @@
         Language (2-letter-code, like en or de): <input type="text" name="lang"><br>
         fortniteapi.io API key: <input type="text" name="key"><br>
         <input type="submit">
+      </form><br><br>
+      
+      <form action="maphistory.html">
+        Generate map history pdf<br>
+        fortniteapi.io API key: <input type="text" name="key"><br>
+        <input type="submit">
       </form>
     </font>
   </body>
