--- a/fnReport/index.html
+++ b/fnReport/index.html
@@ -37,6 +37,7 @@
       
       <form action="maphistory.html">
         <b>Generate map history pdf</b><br>
+        Please note this will take a VERY long time to generate, so press F12 (on Chromium-based browsers) to see progress in the console.
         fortniteapi.io API key: <input type="text" name="key"><br>
         <input type="submit">
       </form>
