--- a/fnReport/test.html
+++ b/fnReport/test.html
@@ -22,10 +22,13 @@
 
 <body>
 	<script type="text/javascript" charset="utf-8">
+console.log("ggg");
 var docDefinition = {
-images: {
+images: [
+{
 test: 'https://picsum.photos/200/300'
-},
+}
+],
 content: [
 { 
 image: 'test'
