--- a/fnReport/test.html
+++ b/fnReport/test.html
@@ -22,15 +22,15 @@
 
 <body>
 	<script type="text/javascript" charset="utf-8">
-console.log("ggg");
+console.log("hhh");
 var docDefinition = {
 images: [
-{
+
 test: 'https://picsum.photos/200/300'
-}
+
 ],
 content: [
-{ 
+{
 image: 'test'
 }
 ]
