--- a/fnReport/test.html
+++ b/fnReport/test.html
@@ -24,14 +24,16 @@
 	<script type="text/javascript" charset="utf-8">
 console.log("hhh");
 var docDefinition = {
+/*
 images: [
 
-test: 'https://picsum.photos/200/300'
+'https://picsum.photos/200/300'
 
 ],
+*/
 content: [
 {
-image: 'test'
+image: 'https://picsum.photos/200/300'
 }
 ]
 };
