--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -411,6 +411,7 @@ console.log("cover, toc, br news");
 
 		var docDefinition = {
 			content: inhalt,
+			images: images,
 			header: {text: "fnReport "+datum, alignment: 'center', fontSize: 8},
 			footer: function(currentPage) { return {text: currentPage, alignment: 'center', fontSize: 8}}
 
