--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -50,8 +50,8 @@ console.log("cover, toc, br news");
 		var images = {
 			cover1: fnbr.news[0].image,
 			cover2: fnbr.news[1].image,
-			cover3: bildurl3=fnstw.news[0].image,
-			cover4: bildurl4=fncreative.news[0].image,
+			cover3: fnstw.news[0].image,
+			cover4: fncreative.news[0].image,
 			cover5: fnshop.shop[0].granted[0].images.icon,
 			cover6: fnshop.shop[1].granted[0].images.icon
 		};
