--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -47,7 +47,7 @@
 		
 // Cover
 console.log("cover, toc, br news");
-		var images = {
+		var bilder = {
 			cover1: fnbr.news[0].image,
 			cover2: fnbr.news[1].image,
 			cover3: fnstw.news[0].image,
@@ -411,7 +411,7 @@ console.log("cover, toc, br news");
 
 		var docDefinition = {
 			content: inhalt,
-			images: images,
+			images: bilder,
 			header: {text: "fnReport "+datum, alignment: 'center', fontSize: 8},
 			footer: function(currentPage) { return {text: currentPage, alignment: 'center', fontSize: 8}}
 
