--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -79,16 +79,16 @@ console.log("cover, toc, br news");
 		widths: [250,250],
 		body: [
 		[
-		{image: cover1, fillColor: farbe1, width: 245, alignment: 'center'},
-		{image: cover2, fillColor: farbe1, width: 245, alignment: 'center'}
+		{image: 'cover1', fillColor: farbe1, width: 245, alignment: 'center'},
+		{image: 'cover2', fillColor: farbe1, width: 245, alignment: 'center'}
 		],
 		[
-		{image: cover3, fillColor: farbe2, width: 245, alignment: 'center'},
-		{image: cover4, fillColor: farbe2, width: 245, alignment: 'center'}
+		{image: 'cover3', fillColor: farbe2, width: 245, alignment: 'center'},
+		{image: 'cover4', fillColor: farbe2, width: 245, alignment: 'center'}
 		],
 		[
-		{image: cover5, fillColor: farbe3, width: 245, alignment: 'center'},
-		{image: cover6, fillColor: farbe3, width: 245, alignment: 'center'}
+		{image: 'cover5', fillColor: farbe3, width: 245, alignment: 'center'},
+		{image: 'cover6', fillColor: farbe3, width: 245, alignment: 'center'}
 		]
 		
 		]
@@ -130,7 +130,7 @@ console.log("cover, toc, br news");
 		{text: fnbr.news[i].title, fontSize: 20},
 		{text: fnbr.news[i].date+", aktuell: "+fnbr.news[i].live+", AdSpace: "+fnbr.news[i].adspace},
 		{text: " "},
-			{image: brnews, width: 200},
+			{image: 'brnews', width: 200},
 			/*
 		);
 		
