--- a/fnReport/generate.html
+++ b/fnReport/generate.html
@@ -48,12 +48,12 @@
 // Cover
 console.log("cover, toc, br news");
 		var bilder = {
-			cover1: fnbr.news[0].image,
-			cover2: fnbr.news[1].image,
-			cover3: fnstw.news[0].image,
-			cover4: fncreative.news[0].image,
-			cover5: fnshop.shop[0].granted[0].images.icon,
-			cover6: fnshop.shop[1].granted[0].images.icon
+			cover1: "https://cors.bridget.cc/"+fnbr.news[0].image,
+			cover2: "https://cors.bridget.cc/"+fnbr.news[1].image,
+			cover3: "https://cors.bridget.cc/"+fnstw.news[0].image,
+			cover4: "https://cors.bridget.cc/"+fncreative.news[0].image,
+			cover5: "https://cors.bridget.cc/"+fnshop.shop[0].granted[0].images.icon,
+			cover6: "https://cors.bridget.cc/"+fnshop.shop[1].granted[0].images.icon
 		};
 		var inhalt = [
 		
@@ -121,7 +121,7 @@ console.log("cover, toc, br news");
 
 		
 		for(i=0;i<fnbr.news.length;i++) {
-			bilder = Object.assign({brnews: fnbr.news[i].image},bilder);
+			bilder = Object.assign({brnews: "https://cors.bridget.cc/"+fnbr.news[i].image},bilder);
 		//var bildurl=fnbr.news[i].image;
 		//var bild=httpGet("https://helloacm.com/api/image-to-base64/?url="+bildurl);
 		//console.log(bildurl);
